alignment fixed

--- a/assets/components/molecules/add-to-cart-action/add-to-cart-action.scss
+++ b/assets/components/molecules/add-to-cart-action/add-to-cart-action.scss
@@ -2,7 +2,7 @@
 
 .cta-container {
   display: flex;
-
+  align-items: center;
 }
 
 .icon-favorit {
